taught on setTimeout

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <label id="countlabel">0</label><br><br><br>
+    <!-- <label id="countlabel">0</label><br><br><br>
     <button id="increase">+</button>
     <button id="clear">clear</button>
-    <button id="decrease">-</button>
+    <button id="decrease">-</button> -->
+
+    <button onclick="startTimer()"> Start</button>
+    <button onclick="clearTimer()"> Clear</button>
 
     <script src="index.js"></script>
   </body>
